fixed spacing

--- a/src/app/(landing)/(about)/landing.module.scss
+++ b/src/app/(landing)/(about)/landing.module.scss
@@ -24,9 +24,8 @@
     }
 
     h2 {
-      margin-top: 10px;
+      margin: 10px 30px 0 0;
       font-size: 1.5rem;
-      margin-right: 30px;
     }
 
     .imageWrapper {
@@ -65,7 +64,7 @@
       }
 
       h2 {
-        margin-bottom: 10px;
+        margin: 10px 0 15px;
       }
 
       .imageWrapper {
